--- a/.github/workflows/del.yml
+++ b/.github/workflows/del.yml
@@ -1,39 +1,32 @@
+
 name: Delete Old Workflows
 
 on:
-  repository_dispatch:
   workflow_dispatch:
-    inputs:
-      ssh:
-        description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
-#  watch:
-#    types: started
-#  schedule:
-#    - cron: 0 21 */7 * * 
+
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
   Delete-Workflow-Archive:
     runs-on: ubuntu-latest
     steps:
+      - name: Delete Workflow Runs1
+        id: workflow
+        uses: GitRML/delete-workflow-runs@main
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          retain_days: 1
 
-    - name: Delete workflow runs
-      uses: Mattraks/delete-workflow-runs@v2
-      with:
+      - name: Delete workflow runs2
+        uses: GitRML/delete-workflow-runs@main
+        with:
           retain_days: 1
           keep_minimum_runs: 1
-
-    - name: Remove old Releases
-      uses: dev-drprasad/delete-older-releases@v0.2.1
-      with:
-          keep_latest: 1
-          delete_tags: true
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Delete Artifacts
-      uses: geekyeggo/delete-artifact@v2
-      with:
-         name: |
-            bin-archive
+          
+      - name: Delete workflow runs3
+        uses: GitRML/delete-workflow-runs@main
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
+          retain_days: 1
