--- a/.github/workflows/del.yml
+++ b/.github/workflows/del.yml
@@ -17,46 +17,12 @@ jobs:
   Delete-Workflow-Archive:
     runs-on: ubuntu-latest
     steps:
-      - name: Delete Workflow Runs1
-        id: workflow
-        uses: GitRML/delete-workflow-runs@main
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          retain_days: 2
+     
 
-      - name: Delete workflow runs2
-        uses: GitRML/delete-workflow-runs@main
-        with:
-          retain_days: 2
-          keep_minimum_runs: 1
-          
-      - name: Delete workflow runs3
-        uses: GitRML/delete-workflow-runs@main
-        with:
-          token: ${{ secrets.AUTH_PAT }}
-          repository: ${{ github.repository }}
-          retain_days: 2
 
-      - name: Delete older releases
-        uses: dev-drprasad/delete-older-releases@master
-        if: env.DELETE_RELEASE == 'true'
-        with:
-          keep_latest: ${{ env.KEEP_MININUM_RELEASE }}
-          delete_tags: true
-          delete_tag_pattern: _
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Delete older workflow runs and artifacts
-        uses: Mattraks/delete-workflow-runs@main
-        if: env.DELETE_ARTIFACTS == 'true'
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          repository: ${{ github.repository }}
-          retain_days: ${{ env.KEEP_DAY }}
-          keep_minimum_runs: ${{ env.KEEP_MININUM_RUNS }}
-      - name: Remove old artifacts
-        uses: c-hive/gha-remove-artifacts@v1
-        with:
-         age: '2 day'
-         skip-recent: 3
+    - name: 删除运行记录
+      uses: GitRML/delete-workflow-runs@main
+      with:
+        retain_days: 1
+        keep_minimum_runs: 1
+        token: ${{ secrets.TOKEN }}
