--- a/.config
+++ b/.config
@@ -1,10 +1,10 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
-CONFIG_ALL_KMODS=y
+# CONFIG_ALL_KMODS=y
 CONFIG_DEVEL=y
 CONFIG_BUSYBOX_CUSTOM=y
-CONFIG_CCACHE=y
+# CONFIG_CCACHE=y
 CONFIG_DOCKER_NET_ENCRYPT=y
 CONFIG_DOCKER_NET_MACVLAN=y
 CONFIG_DOCKER_NET_OVERLAY=y
