--- a/.github/workflows/sync-files.yml
+++ b/.github/workflows/sync-files.yml
@@ -107,6 +107,8 @@ jobs:
         sed -i '/transmission/d' .config 
         sed -i '/aliddns/d' .config 
         sed -i '/interfaceconfig/d' .config 
+        sed -i '/iperf3/d' .config 
+        
         #移除argon-config
         sed -i '/argon-config/d' .config 
         
