--- a/.github/workflows/sync-files.yml
+++ b/.github/workflows/sync-files.yml
@@ -15,8 +15,8 @@ jobs:
 
     - name: 下载架构编译配置文件
       run: |
-        wget -O ./feeds.conf https://fw0.koolcenter.com/iStoreOS/alpha/x86_64_efi/feeds.conf
-        wget -O ./.config https://fw0.koolcenter.com/iStoreOS/alpha/x86_64_efi/config.buildinfo
+        curl --connect-timeout 5 -m 60 -s --ipv4 -kfSLo  ./feeds.conf https://fw0.koolcenter.com/iStoreOS/alpha/x86_64_efi/feeds.conf
+        curl --connect-timeout 5 -m 60 -s --ipv4 -kfSLo  ./.config https://fw0.koolcenter.com/iStoreOS/alpha/x86_64_efi/config.buildinfo
         
     - name: 注释软件源
       run: |
