--- a/.github/workflows/sync-files.yml
+++ b/.github/workflows/sync-files.yml
@@ -15,9 +15,10 @@ jobs:
 
     - name: 下载架构编译配置文件
       run: |
-        curl --connect-timeout 5 -m 60 -s --ipv4 -kfSLo  ./feeds.conf https://fw0.koolcenter.com/iStoreOS/alpha/x86_64_efi/feeds.conf
-        curl --connect-timeout 5 -m 60 -s --ipv4 -kfSLo  ./.config https://fw0.koolcenter.com/iStoreOS/alpha/x86_64_efi/config.buildinfo
-        
+        #wget-ssl --quiet --no-check-certificate --tries 1 --timeout 10 -O  ./feeds.conf https://fw0.koolcenter.com/iStoreOS/alpha/x86_64_efi/feeds.conf
+        #wget-ssl --quiet --no-check-certificate --tries 1 --timeout 10 -O  ./.config https://fw0.koolcenter.com/iStoreOS/alpha/x86_64_efi/config.buildinfo
+        curl -fsSL https://fw0.koolcenter.com/iStoreOS/alpha/x86_64_efi/feeds.conf > ./feeds.conf
+        curl -fsSL  https://fw0.koolcenter.com/iStoreOS/alpha/x86_64_efi/config.buildinfo > ./.config
     - name: 注释软件源
       run: |
         #注释应用过滤
