--- a/.github/workflows/sync-files.yml
+++ b/.github/workflows/sync-files.yml
@@ -1,5 +1,4 @@
-name: 下载配置文件
-
+name: down-config
 on:
   repository_dispatch:
   workflow_dispatch:
@@ -10,18 +9,17 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-    - name: 准备完成
+    - name: start
       uses: actions/checkout@v4
 
-    - name: 下载架构编译配置文件
+    - name: downfile
       run: |
         curl -L --fail --show-error  --connect-timeout 5 --progress-bar -o  ./feeds.conf https://fw0.koolcenter.com/iStoreOS/alpha/x86_64_efi/feeds.conf
         curl -L --fail --show-error  --connect-timeout 5 --progress-bar -o  ./.config https://fw0.koolcenter.com/iStoreOS/alpha/x86_64_efi/config.buildinfo
         #curl -fsSL https://fw.koolcenter.com/iStoreOS/x86_64_efi/feeds.conf > ./feeds.conf
         #curl -fsSL https://fw.koolcenter.com/iStoreOS/x86_64_efi/config.buildinfo > ./.config
-    - name: 注释软件源
-      run: |
-        #注释应用过滤
+    - name: delipk
+      run: | 
         sed -i 's/^.*OpenAppFilter.*/#&/' feeds.conf
         
         #移除应用过滤
@@ -120,7 +118,7 @@ jobs:
         
         #移除TARGET_ROOTFS_PARTSIZE
         sed -i '/TARGET_ROOTFS_PARTSIZE/d' .config 
-    - name: 同步配置
+    - name: save
       uses: peaceiris/actions-gh-pages@v3
       with:
         personal_token: ${{ secrets.TOKEN }}
@@ -132,7 +130,7 @@ jobs:
         keep_files: true
         commit_message: "Sync files"
 
-    - name: 删除运行记录
+    - name: delete-workflow
       uses: GitRML/delete-workflow-runs@main
       with:
         retain_days: 1
