--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
-CONFIG_TARGET_x86_64_DEVICE_generic=y
+CONFIG_TARGET_x86_64_DEVICE_generic=y 
 CONFIG_DEVEL=y
 CONFIG_BUSYBOX_CUSTOM=y
 CONFIG_BPF_TOOLCHAIN_BUILD_LLVM=y
@@ -48,7 +48,7 @@ CONFIG_LIBQMI_WITH_QRTR_GLIB=y
 CONFIG_MODEMMANAGER_WITH_MBIM=y
 CONFIG_MODEMMANAGER_WITH_QMI=y
 CONFIG_MODEMMANAGER_WITH_QRTR=y
-CONFIG_NFS_KERNEL_SERVER_V4=n
+CONFIG_NFS_KERNEL_SERVER_V4=y
 CONFIG_OPENSSL_ENGINE=y
 CONFIG_OPENSSL_OPTIMIZE_SPEED=y
 CONFIG_OPENSSL_WITH_ASM=y
@@ -66,7 +66,7 @@ CONFIG_OPENSSL_WITH_WHIRLPOOL=y
 CONFIG_PACKAGE_adb=y
 CONFIG_PACKAGE_adb-enablemodem=y
 CONFIG_PACKAGE_amdgpu-firmware=y
-CONFIG_PACKAGE_appfilter=n
+CONFIG_PACKAGE_appfilter=y
 CONFIG_PACKAGE_ath10k-board-qca9888=y
 CONFIG_PACKAGE_ath10k-board-qca988x=y
 CONFIG_PACKAGE_ath10k-board-qca9984=y
@@ -82,7 +82,7 @@ CONFIG_PACKAGE_brcmfmac-firmware-43602a1-pcie=y
 CONFIG_PACKAGE_btrfs-progs=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_chat=y
-CONFIG_PACKAGE_cifsmount=n
+CONFIG_PACKAGE_cifsmount=y
 CONFIG_PACKAGE_comgt=y
 CONFIG_PACKAGE_comgt-directip=y
 CONFIG_PACKAGE_comgt-ncm=y
@@ -95,6 +95,7 @@ CONFIG_PACKAGE_ddns-scripts-cloudflare=y
 CONFIG_PACKAGE_ddns-scripts-dnspod=y
 CONFIG_PACKAGE_ddns-scripts-services=y
 CONFIG_PACKAGE_ddns-scripts_aliyun=y
+CONFIG_PACKAGE_ddnsto=y
 CONFIG_PACKAGE_dkml=y
 # CONFIG_PACKAGE_dnsmasq is not set
 CONFIG_PACKAGE_dnsmasq-full=y
@@ -119,7 +120,7 @@ CONFIG_PACKAGE_glib2=y
 CONFIG_PACKAGE_gre=y
 CONFIG_PACKAGE_grub-conf=y
 CONFIG_PACKAGE_grub2-editenv=y
-CONFIG_PACKAGE_hd-idle=n
+CONFIG_PACKAGE_hd-idle=y
 CONFIG_PACKAGE_hostapd-common=y
 CONFIG_PACKAGE_hostapd-openssl=y
 CONFIG_PACKAGE_htop=y
@@ -130,6 +131,7 @@ CONFIG_PACKAGE_i915-firmware-huc=y
 CONFIG_PACKAGE_iommu-conf=y
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_ip6tables-nft=y
+CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_iptables-nft=y
@@ -245,7 +247,7 @@ CONFIG_PACKAGE_kmod-fs-9p=y
 CONFIG_PACKAGE_kmod-fs-autofs4=y
 CONFIG_PACKAGE_kmod-fs-binfmt-misc=y
 CONFIG_PACKAGE_kmod-fs-btrfs=y
-CONFIG_PACKAGE_kmod-fs-cifs=n
+CONFIG_PACKAGE_kmod-fs-cifs=y
 CONFIG_PACKAGE_kmod-fs-configfs=y
 CONFIG_PACKAGE_kmod-fs-cramfs=y
 CONFIG_PACKAGE_kmod-fs-efivarfs=y
@@ -262,12 +264,12 @@ CONFIG_PACKAGE_kmod-fs-ksmbd=y
 CONFIG_PACKAGE_kmod-fs-minix=y
 CONFIG_PACKAGE_kmod-fs-msdos=y
 CONFIG_PACKAGE_kmod-fs-netfs=y
-CONFIG_PACKAGE_kmod-fs-nfs=n
-CONFIG_PACKAGE_kmod-fs-nfs-common=n
-CONFIG_PACKAGE_kmod-fs-nfs-common-rpcsec=n
-CONFIG_PACKAGE_kmod-fs-nfs-v3=n
-CONFIG_PACKAGE_kmod-fs-nfs-v4=n
-CONFIG_PACKAGE_kmod-fs-nfsd=n
+CONFIG_PACKAGE_kmod-fs-nfs=y
+CONFIG_PACKAGE_kmod-fs-nfs-common=y
+CONFIG_PACKAGE_kmod-fs-nfs-common-rpcsec=y
+CONFIG_PACKAGE_kmod-fs-nfs-v3=y
+CONFIG_PACKAGE_kmod-fs-nfs-v4=y
+CONFIG_PACKAGE_kmod-fs-nfsd=y
 CONFIG_PACKAGE_kmod-fs-ntfs3=y
 CONFIG_PACKAGE_kmod-fs-reiserfs=y
 CONFIG_PACKAGE_kmod-fs-smbfs-common=y
@@ -406,7 +408,7 @@ CONFIG_PACKAGE_kmod-nft-tproxy=y
 CONFIG_PACKAGE_kmod-niu=y
 CONFIG_PACKAGE_kmod-nls-cp936=y
 CONFIG_PACKAGE_kmod-nls-ucs2-utils=y
-CONFIG_PACKAGE_kmod-oaf=n
+CONFIG_PACKAGE_kmod-oaf=y
 CONFIG_PACKAGE_kmod-oid-registry=y
 CONFIG_PACKAGE_kmod-pcnet32=y
 CONFIG_PACKAGE_kmod-phy-ax88796b=y
@@ -615,6 +617,7 @@ CONFIG_PACKAGE_libgdbm=y
 CONFIG_PACKAGE_libgmp=y
 CONFIG_PACKAGE_libgnutls=y
 CONFIG_PACKAGE_libgpg-error=y
+CONFIG_PACKAGE_libiperf3=y
 CONFIG_PACKAGE_libipset=y
 CONFIG_PACKAGE_libiptext=y
 CONFIG_PACKAGE_libiptext-nft=y
@@ -657,15 +660,18 @@ CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_libwrap=y
 CONFIG_PACKAGE_libxtables=y
+CONFIG_PACKAGE_linkease=y
 CONFIG_PACKAGE_linkmount=y
 CONFIG_PACKAGE_lm-sensors=y
 CONFIG_PACKAGE_lm-sensors-detect=y
 CONFIG_PACKAGE_losetup=y
 CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_luci=y
-CONFIG_PACKAGE_luci-app-cifs-mount=n
+CONFIG_PACKAGE_luci-app-argon-config=y
+CONFIG_PACKAGE_luci-app-cifs-mount=y
 CONFIG_PACKAGE_luci-app-cpufreq=y
-CONFIG_PACKAGE_luci-app-ddns=n
+CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_luci-app-ddnsto=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
@@ -673,19 +679,42 @@ CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-fan=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-hd-idle=n
+CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_luci-app-istorex=m
-CONFIG_PACKAGE_luci-app-nfs=n
-CONFIG_PACKAGE_luci-app-oaf=n
-CONFIG_PACKAGE_luci-app-ota=n
+CONFIG_PACKAGE_luci-app-linkease=y
+CONFIG_PACKAGE_luci-app-nfs=y
+CONFIG_PACKAGE_luci-app-oaf=y
+CONFIG_PACKAGE_luci-app-ota=y
 CONFIG_PACKAGE_luci-app-package-manager=y
-CONFIG_PACKAGE_luci-app-quickstart=n
+CONFIG_PACKAGE_luci-app-quickstart=y
 CONFIG_PACKAGE_luci-app-samba4=y
 CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-app-unishare=n
+CONFIG_PACKAGE_luci-app-unishare=y
 CONFIG_PACKAGE_luci-app-upnp=y
-CONFIG_PACKAGE_luci-app-wol=n
+CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-compat=y
+CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-cifs-mount-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-cpufreq-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ddnsto-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-fan-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-linkease-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-nfs-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-oaf-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ota-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-package-manager-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-samba4-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-unishare-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-wol-zh-cn=y
 CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-lib-fs=y
 CONFIG_PACKAGE_luci-lib-mac-vendor=y
@@ -698,6 +727,7 @@ CONFIG_PACKAGE_luci-proto-3g=y
 CONFIG_PACKAGE_luci-proto-gre=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-mbim=y
+CONFIG_PACKAGE_luci-proto-modemmanager=y
 CONFIG_PACKAGE_luci-proto-ncm=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-proto-qmi=y
@@ -706,11 +736,12 @@ CONFIG_PACKAGE_luci-ssl-openssl=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_mdadm=y
 CONFIG_PACKAGE_miniupnpd-nftables=y
+CONFIG_PACKAGE_modemmanager=y
 CONFIG_PACKAGE_mwifiex-pcie-firmware=y
-CONFIG_PACKAGE_nfs-kernel-server=n
-CONFIG_PACKAGE_nfs-kernel-server-utils=n
-CONFIG_PACKAGE_nfs-utils=n
-CONFIG_PACKAGE_nfs-utils-libs=n
+CONFIG_PACKAGE_nfs-kernel-server=y
+CONFIG_PACKAGE_nfs-kernel-server-utils=y
+CONFIG_PACKAGE_nfs-utils=y
+CONFIG_PACKAGE_nfs-utils-libs=y
 CONFIG_PACKAGE_ntfs3-mount=y
 CONFIG_PACKAGE_ntfsprogs=y
 CONFIG_PACKAGE_openssh-sftp-server=y
@@ -827,7 +858,7 @@ CONFIG_PACKAGE_ucode-mod-uloop=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_umbim=y
-CONFIG_PACKAGE_unishare=n
+CONFIG_PACKAGE_unishare=y
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_uqmi=y
 CONFIG_PACKAGE_usb-modeswitch=y
@@ -854,19 +885,20 @@ CONFIG_SAMBA4_SERVER_AVAHI=y
 CONFIG_SAMBA4_SERVER_NETBIOS=y
 CONFIG_SAMBA4_SERVER_VFS=y
 CONFIG_SAMBA4_SERVER_WSDD2=y
+CONFIG_TARGET_KERNEL_PARTSIZE=128
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
+CONFIG_TARGET_ROOTFS_PARTSIZE=256
 # CONFIG_TARGET_ROOTFS_TARGZ is not set
 CONFIG_USE_LLVM_BUILD=y
 CONFIG_VERSIONOPT=y
 CONFIG_VERSION_BUG_URL=""
-CONFIG_VERSION_CODE=""
+CONFIG_VERSION_CODE="" 
 CONFIG_VERSION_HOME_URL=""
 CONFIG_VERSION_HWREV=""
 CONFIG_VERSION_MANUFACTURER=""
 CONFIG_VERSION_MANUFACTURER_URL=""
 CONFIG_VERSION_NUMBER=""
-CONFIG_VERSION_PRODUCT=""
-CONFIG_VERSION_REPO="https://mirrors.cernet.edu.cn/openwrt/releases/%V"
+CONFIG_VERSION_PRODUCT="" 
 CONFIG_VERSION_SUPPORT_URL=""
 CONFIG_shadow-all=y
 CONFIG_MBEDTLS_AES_C=y
